target/generated-sources/antlr4/com/compiler/delphi/DelphiParser.java
// Generated from com/compiler/delphi/Delphi.g4 by ANTLR 4.13.1
package com.compiler.delphi;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, CONST=2, TYPE=3, VAR=4, PROCEDURE=5, FUNCTION=6, BEGIN=7, END=8, 
		ARRAY=9, OF=10, RECORD=11, SET=12, CASE=13, FILE=14, FORWARD=15, CLASS=16, 
		CONSTRUCTOR=17, DESTRUCTOR=18, IF=19, THEN=20, ELSE=21, WHILE=22, DO=23, 
		REPEAT=24, UNTIL=25, FOR=26, TO=27, DOWNTO=28, WITH=29, GOTO=30, BREAK=31, 
		CONTINUE=32, OUT=33, NIL=34, IN=35, LABEL=36, DIV=37, MOD=38, AND=39, 
		OR=40, NOT=41, POINTER=42, CHR=43, ASSIGN=44, PLUS=45, MINUS=46, STAR=47, 
		SLASH=48, EQ=49, GT=50, LT=51, GE=52, LE=53, NE=54, LPAREN=55, RPAREN=56, 
		LBRACK=57, RBRACK=58, COLON=59, COMMA=60, SEMI=61, DOT=62, DOTDOT=63, 
		INTEGER_CONST=64, REAL_CONST=65, STRING_LITERAL=66, IDENTIFIER=67, WHITESPACE=68, 
		COMMENT=69, COMMENT_LINE=70, COMMENT_PARENTHESIS=71;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifierList = 2, RULE_block = 3, 
		RULE_labelDeclarationPart = 4, RULE_constantDefinitionPart = 5, RULE_constantDefinition = 6, 
		RULE_constant = 7, RULE_constantChr = 8, RULE_typeDefinitionPart = 9, 
		RULE_typeDefinition = 10, RULE_typeSpec = 11, RULE_simpleType = 12, RULE_scalarType = 13, 
		RULE_subrangeType = 14, RULE_typeIdentifier = 15, RULE_structuredType = 16, 
		RULE_arrayType = 17, RULE_typeList = 18, RULE_indexType = 19, RULE_recordType = 20, 
		RULE_fieldList = 21, RULE_fixedPart = 22, RULE_recordSection = 23, RULE_variantPart = 24, 
		RULE_tag = 25, RULE_variant = 26, RULE_constList = 27, RULE_setType = 28, 
		RULE_fileType = 29, RULE_pointerType = 30, RULE_variableDeclarationPart = 31, 
		RULE_variableDeclaration = 32, RULE_procedureAndFunctionDeclarationPart = 33, 
		RULE_procedureOrFunctionDeclaration = 34, RULE_procedureDeclaration = 35, 
		RULE_procedureHeading = 36, RULE_functionDeclaration = 37, RULE_functionHeading = 38, 
		RULE_directive = 39, RULE_formalParameterList = 40, RULE_formalParameterSection = 41, 
		RULE_parameterGroup = 42, RULE_classDeclarationPart = 43, RULE_memberDeclaration = 44, 
		RULE_constructorDeclaration = 45, RULE_destructorDeclaration = 46, RULE_constructorImplementation = 47, 
		RULE_statement = 48, RULE_unlabelledStatement = 49, RULE_simpleStatement = 50, 
		RULE_assignmentStatement = 51, RULE_procedureStatement = 52, RULE_parameterList = 53, 
		RULE_actualParameter = 54, RULE_gotoStatement = 55, RULE_emptyStatement = 56, 
		RULE_breakStatement = 57, RULE_continueStatement = 58, RULE_structuredStatement = 59, 
		RULE_compoundStatement = 60, RULE_statementList = 61, RULE_conditionalStatement = 62, 
		RULE_ifStatement = 63, RULE_caseStatement = 64, RULE_caseListElement = 65, 
		RULE_repetitiveStatement = 66, RULE_whileStatement = 67, RULE_repeatStatement = 68, 
		RULE_forStatement = 69, RULE_withStatement = 70, RULE_expression = 71, 
		RULE_relationalOperator = 72, RULE_simpleExpression = 73, RULE_additiveOperator = 74, 
		RULE_term = 75, RULE_multiplicativeOperator = 76, RULE_signedFactor = 77, 
		RULE_factor = 78, RULE_unsignedConstant = 79, RULE_functionDesignator = 80, 
		RULE_parameterValue = 81, RULE_variable = 82, RULE_stringLiteral = 83, 
		RULE_set_ = 84, RULE_elementList = 85, RULE_element = 86, RULE_label = 87, 
		RULE_unsignedNumber = 88, RULE_unsignedInteger = 89, RULE_unsignedReal = 90, 
		RULE_sign = 91, RULE_identifier = 92;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifierList", "block", "labelDeclarationPart", 
			"constantDefinitionPart", "constantDefinition", "constant", "constantChr", 
			"typeDefinitionPart", "typeDefinition", "typeSpec", "simpleType", "scalarType", 
			"subrangeType", "typeIdentifier", "structuredType", "arrayType", "typeList", 
			"indexType", "recordType", "fieldList", "fixedPart", "recordSection", 
			"variantPart", "tag", "variant", "constList", "setType", "fileType", 
			"pointerType", "variableDeclarationPart", "variableDeclaration", "procedureAndFunctionDeclarationPart", 
			"procedureOrFunctionDeclaration", "procedureDeclaration", "procedureHeading", 
			"functionDeclaration", "functionHeading", "directive", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "classDeclarationPart", "memberDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "constructorImplementation", 
			"statement", "unlabelledStatement", "simpleStatement", "assignmentStatement", 
			"procedureStatement", "parameterList", "actualParameter", "gotoStatement", 
			"emptyStatement", "breakStatement", "continueStatement", "structuredStatement", 
			"compoundStatement", "statementList", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetitiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "withStatement", "expression", "relationalOperator", 
			"simpleExpression", "additiveOperator", "term", "multiplicativeOperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterValue", 
			"variable", "stringLiteral", "set_", "elementList", "element", "label", 
			"unsignedNumber", "unsignedInteger", "unsignedReal", "sign", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'^'", null, "':='", "'+'", "'-'", 
			"'*'", "'/'", "'='", "'>'", "'<'", "'>='", "'<='", "'<>'", "'('", "')'", 
			"'['", "']'", "':'", "','", "';'", "'.'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "CONST", "TYPE", "VAR", "PROCEDURE", "FUNCTION", "BEGIN", 
			"END", "ARRAY", "OF", "RECORD", "SET", "CASE", "FILE", "FORWARD", "CLASS", 
			"CONSTRUCTOR", "DESTRUCTOR", "IF", "THEN", "ELSE", "WHILE", "DO", "REPEAT", 
			"UNTIL", "FOR", "TO", "DOWNTO", "WITH", "GOTO", "BREAK", "CONTINUE", 
			"OUT", "NIL", "IN", "LABEL", "DIV", "MOD", "AND", "OR", "NOT", "POINTER", 
			"CHR", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "EQ", "GT", "LT", 
			"GE", "LE", "NE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "COMMA", 
			"SEMI", "DOT", "DOTDOT", "INTEGER_CONST", "REAL_CONST", "STRING_LITERAL", 
			"IDENTIFIER", "WHITESPACE", "COMMENT", "COMMENT_LINE", "COMMENT_PARENTHESIS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			programHeading();
			setState(187);
			match(SEMI);
			setState(188);
			block();
			setState(189);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(PROGRAM);
			setState(192);
			identifier();
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(193);
				match(LPAREN);
				setState(194);
				identifierList();
				setState(195);
				match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierListContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DelphiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DelphiParser.COMMA, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			identifier();
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(200);
				match(COMMA);
				setState(201);
				identifier();
				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<LabelDeclarationPartContext> labelDeclarationPart() {
			return getRuleContexts(LabelDeclarationPartContext.class);
		}
		public LabelDeclarationPartContext labelDeclarationPart(int i) {
			return getRuleContext(LabelDeclarationPartContext.class,i);
		}
		public List<ConstantDefinitionPartContext> constantDefinitionPart() {
			return getRuleContexts(ConstantDefinitionPartContext.class);
		}
		public ConstantDefinitionPartContext constantDefinitionPart(int i) {
			return getRuleContext(ConstantDefinitionPartContext.class,i);
		}
		public List<TypeDefinitionPartContext> typeDefinitionPart() {
			return getRuleContexts(TypeDefinitionPartContext.class);
		}
		public TypeDefinitionPartContext typeDefinitionPart(int i) {
			return getRuleContext(TypeDefinitionPartContext.class,i);
		}
		public List<VariableDeclarationPartContext> variableDeclarationPart() {
			return getRuleContexts(VariableDeclarationPartContext.class);
		}
		public VariableDeclarationPartContext variableDeclarationPart(int i) {
			return getRuleContext(VariableDeclarationPartContext.class,i);
		}
		public List<ProcedureAndFunctionDeclarationPartContext> procedureAndFunctionDeclarationPart() {
			return getRuleContexts(ProcedureAndFunctionDeclarationPartContext.class);
		}
		public ProcedureAndFunctionDeclarationPartContext procedureAndFunctionDeclarationPart(int i) {
			return getRuleContext(ProcedureAndFunctionDeclarationPartContext.class,i);
		}
		public List<ClassDeclarationPartContext> classDeclarationPart() {
			return getRuleContexts(ClassDeclarationPartContext.class);
		}
		public ClassDeclarationPartContext classDeclarationPart(int i) {
			return getRuleContext(ClassDeclarationPartContext.class,i);
		}
		public List<ConstructorImplementationContext> constructorImplementation() {
			return getRuleContexts(ConstructorImplementationContext.class);
		}
		public ConstructorImplementationContext constructorImplementation(int i) {
			return getRuleContext(ConstructorImplementationContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 68719673468L) != 0)) {
				{
				setState(214);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LABEL:
					{
					setState(207);
					labelDeclarationPart();
					}
					break;
				case CONST:
					{
					setState(208);
					constantDefinitionPart();
					}
					break;
				case TYPE:
					{
					setState(209);
					typeDefinitionPart();
					}
					break;
				case VAR:
					{
					setState(210);
					variableDeclarationPart();
					}
					break;
				case PROCEDURE:
				case FUNCTION:
					{
					setState(211);
					procedureAndFunctionDeclarationPart();
					}
					break;
				case CLASS:
					{
					setState(212);
					classDeclarationPart();
					}
					break;
				case CONSTRUCTOR:
					{
					setState(213);
					constructorImplementation();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelDeclarationPartContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(DelphiParser.LABEL, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DelphiParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DelphiParser.COMMA, i);
		}
		public LabelDeclarationPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDeclarationPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterLabelDeclarationPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitLabelDeclarationPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitLabelDeclarationPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelDeclarationPartContext labelDeclarationPart() throws RecognitionException {
		LabelDeclarationPartContext _localctx = new LabelDeclarationPartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_labelDeclarationPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			match(LABEL);
			setState(222);
			label();
			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(223);
				match(COMMA);
				setState(224);
				label();
				}
				}
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(230);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
